Traefik/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: amolfunde/mysql:hrms  # Change to your MySQL image version
          ports:
            - containerPort: 3306  # MySQL default port
