Traefik/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  type: ClusterIP # Change to LoadBalancer if you want external access
  ports:
    - port: 3306  # The port that the service will expose
      targetPort: 3306  # The port on the container
  selector:
    app: mysql  # This should match the labels in your MySQL deployment
