Traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrms-service
  labels:
    env: demo
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
  selector:
    env: demo
